tests/verifier/fail/test0.ial
function void foo()
{
    block entry
    {
    }
}
